# ColumbiaX-Robotics

./: README.md
marker_publisher/: CMakeLists.txt  package.xml
marker_publisher/launch/: execute.launch
project1/: CMakeLists.txt  README.md  package.xml
project1/launch/: execute.launch
project1/src/: solution.py
project1_solution/: .cproject  .project  CMakeLists.txt  README.md  package.xml
project1_solution/launch/: execute.launch
project1_solution/msg/: TwoInts.msg
project1_solution/src/: solution.py
project2/: CMakeLists.txt  README.md  package.xml
project2/launch/: config.rviz  execute.launch
project2/marker_publisher/launch/: execute.launch
project2/project2_solution/: package.xml
project2/project2_solution/launch/: execute.launch
project2/project2_solution/src/: solution.py
project2/src/: solution.py
project2_solution/: CMakeLists.txt  README.md
project2_solution/launch/: config.rviz  execute.launch
project2_solution/src/: solution.py
project3/: README.md  kuka_lwr_arm.urdf
project3/forward_kinematics/: CMakeLists.txt  README.md  package.xml
project3/forward_kinematics/src/: solution.py
project3/lwr_robot/lwr_defs/defs/: kuka_lwr_arm_defs.xml  util_defs.xml
project3/lwr_robot/lwr_defs/robots/: kuka_lwr_arm.urdf  kuka_lwr_arm.urdf.xml
project3/resources/: lwr.gv
project3/robot_mover/: CMakeLists.txt  package.xml
project3/robot_mover/src/: mover.cpp
project3/robot_sim/: CMakeLists.txt  package.xml
project3/robot_sim/include/robot_sim/: velocity_controller.h
project3/robot_sim/launch/: baxter.launch  kuka_lwr.launch  kuka_lwr_prj5.launch  kuka_lwr_test.launch
project3/robot_sim/src/: position_controller.cpp  robot.cpp  velocity_controller.cpp
project4/: README.md
project4/cartesian_control/: CMakeLists.txt  package.xml
project4/cartesian_control/config/: rviz.rviz
project4/cartesian_control/launch/: cartesian_exec.launch
project4/cartesian_control/scripts/: cartesian_control.py  grader.py  marker_control.py
project5/: README.md
project5/lwr_robot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
project5/lwr_robot_moveit_config/config/: arm_control.yaml  fake_controllers.yaml  joint_limits.yaml  joint_names.yaml  kinematics.yaml  lwr.srdf  ompl_planning.yaml  ros_controllers.yaml
project5/lwr_robot_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  lwr_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_execution.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
project5/motion_planning/: CMakeLists.txt  package.xml
project5/motion_planning/.svn/: wc.db
project5/motion_planning/config/: mp.rviz
project5/motion_planning/launch/: kuka_lwr.launch  mp.launch
project5/motion_planning/scripts/: grader.py  marker_control.py  motion_planning.py  obstacle_generator.py
project5/motion_planning/scripts/matlab-test/: README.md  test.m
project5/robot_sim_prj5/: CMakeLists.txt  README.md  package.xml
project5/robot_sim_prj5/.svn/: wc.db
project5/robot_sim_prj5/include/robot_sim/: trajectory_executer.h
project5/robot_sim_prj5/include/robot_sim_prj5/: joint_state_publisher.h  position_controller.h  robot.h  trajectory_executer.h  velocity_controller.h
project5/robot_sim_prj5/launch/: kuka_lwr.launch
project5/robot_sim_prj5/src/: joint_state_publisher.cpp  position_controller.cpp  robot.cpp  robot_sim_bringup.cpp  trajectory_executer.cpp  velocity_controller.cpp
tf2_examples/: CMakeLists.txt  package.xml
tf2_examples/src/: tf2_examples.py
utils/kuka_lwr/: kuka_lwr_arm.urdf
utils/kuka_lwr/lwr_robot/lwr_defs/: README.md
utils/kuka_lwr/lwr_robot/lwr_defs/calibration/: default_cal.xml  ias_cal_190809.xml
utils/kuka_lwr/lwr_robot/lwr_defs/defs/: kuka_lwr_arm_defs.xml
utils/kuka_lwr/lwr_robot/lwr_defs/robots/: kuka_lwr_arm.urdf  kuka_lwr_arm.urdf.xml
utils/kuka_lwr/robot_mover/: CMakeLists.txt  package.xml
utils/kuka_lwr/robot_sim/: CMakeLists.txt  package.xml
utils/kuka_lwr/robot_sim/include/robot_sim/: robot.h
utils/kuka_lwr/robot_sim/launch/: baxter.launch  kuka_lwr.launch  kuka_lwr_simple.launch  kuka_lwr_test.launch
utils/kuka_lwr/robot_sim/scripts/: position_command.py
utils/kuka_lwr/robot_sim/src/: joint_state_publisher.cpp  position_controller.cpp  robot_sim_bringup.cpp
utils/marker_publisher/: README.md
utils/marker_publisher/launch/: execute.launch
utils/marker_publisher/src/: marker_publisher.cpp
utils/tf2_examples/: CMakeLists.txt  README.md  package.xml
utils/tf2_examples/launch/: execute.launch
utils/tf2_examples/src/: tf2_examples.py
