<?xml version="1.0"?>
<package>

  <name>robot_mover</name>
  <version>0.0.0</version>
  <description>The robot_mover package</description>

  <maintainer email="matei@todo.todo">matei</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>forward_kinematics</build_depend>
  <build_depend>lwr_defs</build_depend>
  <build_depend>robot_sim</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>forward_kinematics</run_depend>
  <run_depend>lwr_defs</run_depend>
  <run_depend>robot_sim</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

</package>